// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellWithIcon should render with icon 1`] = `
<div
  className="cell-icon-container cell-icon-container"
>
  <div>
    Test label
  </div>
  <div
    className="icon-container icon-container"
  >
    <Action
      hideLabel={true}
      icon="talend-star"
      label="test"
      link={true}
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`CellWithIcon should render without icon 1`] = `
<div
  className="cell-icon-container cell-icon-container"
>
  <div>
    Test label 2
  </div>
  <div
    className="icon-container icon-container"
  />
</div>
`;
